fixes sonar code smell